# mcp-wasm-edge-gateway

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.js  .secrets.baseline  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_ENHANCEMENT_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.test  Dockerfile.wasm  GENERATION_1_SUMMARY.md  Justfile  Makefile  PRODUCTION_CHECKLIST.md  PROJECT_CHARTER.md  QUALITY_GATES_REPORT.md  README.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  autonomous_demo  autonomous_demo.rs  cargo-mutants.toml  cliff.toml  clippy.toml  codecov.yml  demo.rs  demo_autonomous_sdlc.rs  demo_working.rs  (+22 more)
.cargo/: audit.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot-enhanced.yml  dependabot.yml  project-metrics-enhanced.json  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  security.yml
.husky/: pre-commit
.vscode.recommended/: settings.json
benches/: gateway_benchmarks.rs
benches/common/: mod.rs
config/: loadtest-processor.js  loadtest.yml
crates/mcp-common/: Cargo.toml
crates/mcp-common/src/: autonomous_deployment.rs  autonomous_scaling.rs  circuit_breaker.rs  config.rs  error.rs  lib.rs  metrics.rs  observability.rs  retry.rs  self_healing.rs  types.rs  utils.rs  wasm.rs
crates/mcp-gateway/: Cargo.toml
crates/mcp-gateway/src/: circuit_breaker.rs  gateway.rs  handlers.rs  health.rs  lib.rs  middleware.rs  performance.rs  server.rs
crates/mcp-models/: Cargo.toml
crates/mcp-models/src/: cache.rs  engine.rs  intelligent_cache.rs  lib.rs  loaders.rs  performance_optimization.rs
crates/mcp-pipeline-guard/: Cargo.toml
crates/mcp-pipeline-guard/src/: alerts.rs  guard.rs  health_monitor.rs  lib.rs  pipeline_state.rs  recovery_engine.rs
crates/mcp-queue/: Cargo.toml
crates/mcp-queue/src/: lib.rs  persistent_queue.rs
crates/mcp-router/: Cargo.toml
crates/mcp-router/src/: advanced_load_balancer.rs  cloud_client.rs  intelligent_router.rs  lib.rs  load_balancer.rs
crates/mcp-security/: Cargo.toml
crates/mcp-security/src/: input_validation.rs  lib.rs  standard_security.rs
crates/mcp-telemetry/: Cargo.toml
crates/mcp-telemetry/src/: lib.rs  standard_telemetry.rs
deployment/production/: docker-compose.production.yml  haproxy.cfg  prometheus.yml
deployment/production/config/: production.toml
deployment/production/kubernetes/: mcp-gateway-deployment.yaml
deployment/scripts/: deploy.sh
docs/: ADVANCED_SDLC_OPTIMIZATION_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  GETTING_STARTED.md  INCIDENT_RESPONSE.md  ROADMAP.md  SETUP_REQUIRED.md  WORKFLOWS_MANUAL_SETUP.md
docs/adr/: 001-architecture-decision-records.md  001-architecture-decision-rust-wasm.md  002-model-context-protocol-implementation.md  002-rust-wasm-technology-stack.md  TEMPLATE.md  template.md
docs/guides/: README.md
docs/runbooks/: README.md
docs/workflows/: README.md  WORKFLOW_SETUP_INSTRUCTIONS.md  ci-cd-complete.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/dashboards/json/: mcp-gateway-overview.json
monitoring/grafana/datasources/: prometheus.yml
scripts/: build.sh  maintenance.sh  performance-profile.sh  release.sh  sbom-generate.sh
src/: config.rs  error.rs  gateway.rs  lib.rs  main.rs  models.rs  performance_optimizer.rs  queue.rs  router.rs  security.rs  security_hardening.rs  telemetry.rs
tests/: autonomous_integration_tests.rs  integration.rs  test_config.toml
tests/benchmarks/: performance_benchmarks.rs  performance_tests.rs
tests/common/: mod.rs
tests/fixtures/: sample_requests.json
tests/integration/: advanced_integration_tests.rs  common.rs  gateway_tests.rs  mcp_protocol_tests.rs  mod.rs  offline_queue_tests.rs  performance_tests.rs  security_tests.rs
tests/security/: comprehensive_security_tests.rs
tests/utils/: mock_services.rs  mod.rs
