[package]
name = "mcp-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core gateway component for MCP WASM Edge Gateway"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "mcp-gateway"
path = "src/bin/main.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
mcp-router = { path = "../mcp-router" }
mcp-models = { path = "../mcp-models" }
mcp-queue = { path = "../mcp-queue" }
mcp-security = { path = "../mcp-security" }
mcp-telemetry = { path = "../mcp-telemetry" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = ["native"]
native = ["tokio/rt-multi-thread", "tokio/net", "tokio/fs"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]
tls = ["tower-http/tls"]