[package]
name = "mcp-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Request routing component for MCP WASM Edge Gateway"
keywords.workspace = true
categories.workspace = true

[dependencies]
mcp-common = { path = "../mcp-common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["cloud-fallback"]
cloud-fallback = ["reqwest"]