[package]
name = "mcp-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Telemetry and monitoring for MCP WASM Edge Gateway"
keywords.workspace = true
categories.workspace = true

[dependencies]
mcp-common = { path = "../mcp-common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.20", optional = true }

[features]
default = ["prometheus"]
prometheus = ["dep:prometheus"]
opentelemetry = ["dep:opentelemetry"]